Barke-last-commit

--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
     <main class="main">
         <section class="sideBar">
             <div class="side-container">
-                <div><img src="logo.png" style="width: 22rem;" alt="Logo enval"></div>
+                <div ><img class="logo2" src="logo.png" alt="Logo enval"></div>
                 <div class="side-list">
                     <ul>
                         <li class="hover">
@@ -78,7 +78,7 @@
             <div class="nav-items">
                 <div class="items">
                     <i class="fa-regular fa-bell"></i>
-                    <img src="avatar.jpg" style="height: 3rem;" alt="Your Profile">
+                    <i class="fa-regular fa-circle-user"></i>
                 </div>
             </div>
         </section>
