--- a/serviceClient.html
+++ b/serviceClient.html
@@ -13,7 +13,7 @@
     <main class="main">
         <section class="sideBar">
             <div class="side-container">
-                <div><img src="logo.png" style="width: 22rem;" alt="Logo enval"></div>
+                <div><img class="logo" src="logo.png" style="width: 22rem;" alt="Logo enval"></div>
                 <div class="side-list">
                     <ul>
                         <li class="hover">
@@ -85,11 +85,11 @@
         </section>
         <section class="contenu">
             <div class="container-service">
-                <span class="title">Sujet</span>
+                <label class="title">Sujet</label>
                <div class="input">
                 <input class="text" type="text">
                </div><br>
-               <span class="title2">Message</span>
+               <label class="title2">Message</label>
                <div class="input">
                 <input class="text2" type="text">
                </div>
