--- a/dashboard.html
+++ b/dashboard.html
@@ -13,7 +13,7 @@
 <body>
     <main class="main">
         <section class="sideBar">
-            <div class="side-container">
+            <div id="drawer" class="side-container">
                 <div><img class="logo" src="logo.png" style="width: 22rem;" alt="Logo enval"></div>
                 <div class="side-list">
                     <ul>
@@ -78,6 +78,7 @@
         </section>
         <section class="nav-bar">
             <div class="nav-items">
+             
                 <div class="items">
                     <i class="fa-regular fa-bell"></i>
                     <img src="avatar.jpg" style="height: 3rem;" alt="Your Profile">
