--- a/mainPasTouche.html
+++ b/mainPasTouche.html
@@ -11,7 +11,7 @@
 <body>
     <main class="main">
         <section class="sideBar">
-            <div class="side-container">
+            <div id="drawer" class="side-container">
                 <div ><img class="logo2" src="logo.png" alt="Logo enval"></div>
                 <div class="side-list">
                     <ul>
@@ -76,6 +76,7 @@
         </section>
         <section class="nav-bar">
             <div class="nav-items">
+               
                 <div class="items">
                     <i class="fa-regular fa-bell"></i>
                     <i class="fa-regular fa-circle-user"></i>
