--- a/serviceClient.html
+++ b/serviceClient.html
@@ -12,7 +12,7 @@
 <body>
     <main class="main">
         <section class="sideBar">
-            <div class="side-container">
+            <div id="drawer" class="side-container">
                 <div><img class="logo" src="logo.png" style="width: 22rem;" alt="Logo enval"></div>
                 <div class="side-list">
                     <ul>
@@ -77,6 +77,7 @@
         </section>
         <section class="nav-bar">
             <div class="nav-items">
+               
                 <div class="items">
                     <i class="fa-regular fa-bell"></i>
                     <img class="img-1" src="avatar.jpg" alt="Your Profile">
